--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,8 @@
 selenium==4.35.0
 webdriver-manager==4.0.2
+pandas>=2.0.3
+pyarrow>=14.0.1
+matplotlib>=3.8.0
+numpy>=2.2.6
+thefuzz>=0.22.1
+rapidfuzz>=3.14.0
