--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,23 @@
-selenium==4.35.0
-webdriver-manager==4.0.2
+# Web Framework
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
+pydantic>=2.4.0
+
+# Data Processing
 pandas>=2.0.3
 pyarrow>=14.0.1
 matplotlib>=3.8.0
 numpy>=2.2.6
+
+# Search and Visualization
 thefuzz>=0.22.1
 rapidfuzz>=3.14.0
-streamlit>=1.28.0
 plotly>=5.17.0
 fuzzywuzzy>=0.18.0
+
+# Web Scraping
+selenium==4.35.0
+webdriver-manager==4.0.2
+
+# Production (optional)
+gunicorn>=21.2.0
