--- a/.github/workflows/daily-price-update.yml
+++ b/.github/workflows/daily-price-update.yml
@@ -2,8 +2,8 @@ name: Daily Pokemon Price Tracker
 
 on:
   schedule:
-    # Run every day at 9:00 PM PST (5:00 AM UTC next day)
-    - cron: '0 5 * * *'
+    # Run every day at 8:00 PM PST (4:00 AM UTC next day)
+    - cron: '0 4 * * *'
   workflow_dispatch: # Allow manual trigger
 
 jobs:
@@ -85,9 +85,12 @@ jobs:
         print('✅ Portfolio update completed')
         "
         
-    - name: Get current date for commit message
+    - name: Get current PST date for commit message and file naming
       id: date
-      run: echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
+      run: |
+        # Get current date in America/Los_Angeles (PST/PDT)
+        export TZ=America/Los_Angeles
+        echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
       
     - name: Check if new files were created
       id: check_files
@@ -104,52 +107,12 @@ jobs:
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
         git add daily_prices/
-        git commit -m "📊 Daily price update for ${{ steps.date.outputs.date }}"
+        git commit -m "📊 Daily price update for ${{ steps.date.outputs.date }} (PST)"
         git push
         
-    - name: Create summary report
-      run: |
-        echo "## 📊 Daily Pokemon Price Update Report" >> $GITHUB_STEP_SUMMARY
-        echo "**Date:** $(date +'%Y-%m-%d %H:%M:%S UTC')" >> $GITHUB_STEP_SUMMARY
-        echo "" >> $GITHUB_STEP_SUMMARY
-        
-        if [ -f "daily_prices/market_prices_$(date +'%Y-%m-%d').parquet" ]; then
-          echo "✅ **Price Data Collection:** Success" >> $GITHUB_STEP_SUMMARY
-          
-          # Get file size
-          file_size=$(du -h "daily_prices/market_prices_$(date +'%Y-%m-%d').parquet" | cut -f1)
-          echo "📁 **File Size:** $file_size" >> $GITHUB_STEP_SUMMARY
-          
-          # Count records using Python
-          record_count=$(python -c "
-          import pandas as pd
-          from datetime import date
-          try:
-              df = pd.read_parquet('daily_prices/market_prices_$(date +'%Y-%m-%d').parquet')
-              print(f'{len(df)} total records')
-              print(f'{df[\"marketPrice\"].notna().sum()} with prices')
-          except:
-              print('Could not read file')
-          ")
-          echo "📈 **Records:** $record_count" >> $GITHUB_STEP_SUMMARY
-        else
-          echo "❌ **Price Data Collection:** Failed" >> $GITHUB_STEP_SUMMARY
-        fi
-        
-        echo "" >> $GITHUB_STEP_SUMMARY
-        echo "🤖 *Automated by GitHub Actions*" >> $GITHUB_STEP_SUMMARY
+try: df = pd.read_parquet('daily_prices/market_prices_$(date +'%Y-%m-%d').parquet'); \
+print(f'{len(df)} total records, {df[\"marketPrice\"].notna().sum()} with prices') \
+except Exception as e: print('Could not read file')")
 
-  # Optional: Send notification on failure
-  notify-on-failure:
-    runs-on: ubuntu-latest
-    needs: update-prices
-    if: failure()
-    
-    steps:
-    - name: Create failure report
-      run: |
-        echo "## ❌ Daily Pokemon Price Update Failed" >> $GITHUB_STEP_SUMMARY
-        echo "**Date:** $(date +'%Y-%m-%d %H:%M:%S UTC')" >> $GITHUB_STEP_SUMMARY
-        echo "" >> $GITHUB_STEP_SUMMARY
-        echo "The daily price update process encountered an error." >> $GITHUB_STEP_SUMMARY
-        echo "Please check the logs and investigate the issue." >> $GITHUB_STEP_SUMMARY
+
+
