--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,50 +1,50 @@
-name: Daily Portfolio Update
+# name: Daily Portfolio Update
 
-on:
-  schedule:
-    - cron: '0 3 * * *' # Runs every day at 6:00 UTC
-  workflow_dispatch:
+# on:
+#   schedule:
+#     - cron: '0 3 * * *' # Runs every day at 6:00 UTC
+#   workflow_dispatch:
 
-permissions:
-  contents: write
+# permissions:
+#   contents: write
 
-jobs:
-  run-daily-scripts:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          # allow pushing back to the repository
-          persist-credentials: true
-          # fetch full history so commits can be created on top of main
-          fetch-depth: 0
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-      - name: Run daily price tracker
-        run: python daily_price_tracker.py
-      - name: Run portfolio recompiler
-        run: python portfolio_recompiler.py
+# jobs:
+#   run-daily-scripts:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout repository
+#         uses: actions/checkout@v4
+#         with:
+#           # allow pushing back to the repository
+#           persist-credentials: true
+#           # fetch full history so commits can be created on top of main
+#           fetch-depth: 0
+#       - name: Set up Python
+#         uses: actions/setup-python@v5
+#         with:
+#           python-version: '3.11'
+#       - name: Install dependencies
+#         run: |
+#           python -m pip install --upgrade pip
+#           pip install -r requirements.txt
+#       - name: Run daily price tracker
+#         run: python daily_price_tracker.py
+#       - name: Run portfolio recompiler
+#         run: python portfolio_recompiler.py
 
-      - name: Commit generated parquet files
-        run: |
-          # Configure git user so commits aren't rejected
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+#       - name: Commit generated parquet files
+#         run: |
+#           # Configure git user so commits aren't rejected
+#           git config user.name "github-actions[bot]"
+#           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
-          # Stage parquet files in daily_prices directory (adjust path if different)
-          git add daily_prices/*.parquet || true
+#           # Stage parquet files in daily_prices directory (adjust path if different)
+#           git add daily_prices/*.parquet || true
 
-          # Only commit when there are staged changes
-          if git diff --cached --quiet; then
-            echo "No changes to commit"
-          else
-            git commit -m "chore: update generated daily parquet files [skip ci]"
-            git push origin HEAD:${{ github.ref_name }}
-          fi
+#           # Only commit when there are staged changes
+#           if git diff --cached --quiet; then
+#             echo "No changes to commit"
+#           else
+#             git commit -m "chore: update generated daily parquet files [skip ci]"
+#             git push origin HEAD:${{ github.ref_name }}
+#           fi
